--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <!--- basic page needs
     ================================================== -->
     <meta charset="utf-8">
-    <title>My Portfolio</title>
+    <title>Tanya Rastogi</title>
     <meta name="description" content="">
     <meta name="author" content="">
 
@@ -26,9 +26,9 @@
 
     <!-- favicons
     ================================================== -->
-    <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon.ico">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon.ico">
     <link rel="manifest" href="site.webmanifest">
 
 </head>
@@ -53,7 +53,7 @@
 
         <div class="header-logo">
             <a href="index.html">
-                <img src="images/logo.svg" alt="Homepage">
+                <img src="images/fav.png" alt="Homepage" style="width: 50px; height:50px">
             </a>
         </div>
 
@@ -246,10 +246,7 @@
                         <h1 class="display-1">LIFE PHILOSOPHY</h1>
                     </div>
 
-                    <div class="profile-pic" data-aos="fade-up">
-                        <img src="images/ofile-pic.jpg" srcset="images/ofile-pic.jpg 1x, images/ofile-pic.jpg 2x"
-                            alt="">
-                    </div>
+                    
 
 
                     <br>
