--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
 
     </section> <!-- end portfolio -->
 
-    <section id="projects" class="s-about target-section" style="background-color: #201e3b; color:antiquewhite ">
+    <section id="projects" class="s-about target-section" style="background-color: #201e3b; color:antiquewhite; padding-top:9% ">
 
         <div class="s-about__section">
 
