links added for comapnies

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
                     <div class="position">
                         <div class="position__header">
                             <h6>
-                                <span class="position__co" style="color:antiquewhite">Frshr Technology Ltd</span>
+                                <span class="position__co" style="text-decoration: none; color:antiquewhite"><a href="https://www.frshr.tech/" style="text-decoration: none;">Frshr Technology Ltd</a></span>
                                 <span class="position__pos" style="color:antiquewhite">Backend Developer</span>
                             </h6>
                             <div class="position__timeframe">
@@ -203,7 +203,7 @@
                         </div>
 
                         <p>
-                            Working as a Node.js backend developer. Working with postgreSQL database.
+                            Working as a Node.js backend developer. Using with PEAN stack.
                         </p>
                     </div>
                 </div> <!-- end column -->
@@ -211,7 +211,7 @@
                     <div class="position">
                         <div class="position__header">
                             <h6>
-                                <span class="position__co" style="color:antiquewhite">K4 Media</span>
+                                <span class="position__co" style="color:antiquewhite"><a href="https://www.k4.media/">K4 Media</a></span>
                                 <span class="position__pos" style="color:antiquewhite">Content Writing</span>
                             </h6>
                             <div class="position__timeframe">
