--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
                         I am an experienced web-developer possesing all the skills required to make a perceptive and
                         intuitive website.
                         A persevering and enthusiastic learner and developer. I believe in - NEVER STOP GAINING
-                        KNOWLEDGE. Good in managing
-                        time and mathematical skills also adds a star to my portfolio.</p>
+                        KNOWLEDGE. Time management skills and mathematical skills also adds a star to my portfolio.</p>
                     <p data-aos="fade-up">I have excellent analytical skills to perform highly complex interactive
                         development work.
                         Articulacy and expressive writing makes me more versatile to adapt any environment.
