--- a/index.html
+++ b/index.html
@@ -102,13 +102,13 @@
 
                 <ul class="hero-social">
                     <li>
-                        <a href="https://www.linkedin.com/in/tanya-rastogi-a6b94b199/" title="">LinkedIn</a>
+                        <a href="https://www.linkedin.com/in/tanya-rastogi-a6b94b199/" target="_blank" title="">LinkedIn</a>
                     </li>
                     <li>
-                        <a href="https://github.com/RastogiTanya" title="">Github</a>
+                        <a href="https://github.com/RastogiTanya" target="_blank" title="">Github</a>
                     </li>
                     <li>
-                        <a href="https://www.instagram.com/tanya.rastogi99/" title="">Instagram</a>
+                        <a href="https://www.instagram.com/tanya.rastogi99/" target="_blank" title="">Instagram</a>
                     </li>
                 </ul> <!-- end hero-social -->
 
@@ -193,7 +193,7 @@
                     <div class="position">
                         <div class="position__header">
                             <h6>
-                                <span class="position__co" style="text-decoration: none; color:antiquewhite"><a href="https://www.frshr.tech/" style="text-decoration: none;">Frshr Technology Ltd</a></span>
+                                <span class="position__co" style="text-decoration: none; color:antiquewhite"><a href="https://www.frshr.tech/" target="_blank" style="text-decoration: none;">Frshr Technology Ltd</a></span>
                                 <span class="position__pos" style="color:antiquewhite">Backend Developer</span>
                             </h6>
                             <div class="position__timeframe">
@@ -210,7 +210,7 @@
                     <div class="position">
                         <div class="position__header">
                             <h6>
-                                <span class="position__co" style="color:antiquewhite"><a href="https://www.k4.media/">K4 Media</a></span>
+                                <span class="position__co" style="color:antiquewhite"><a href="https://www.k4.media/" target="_blank">K4 Media</a></span>
                                 <span class="position__pos" style="color:antiquewhite">Content Writing</span>
                             </h6>
                             <div class="position__timeframe">
@@ -400,7 +400,7 @@
                         <div class="folio-item__cat"></div>
                         <h4 class="folio-item__title">Teamify</h4>
                     </div>
-                    <a href="https://teamiify.herokuapp.com/" title="Project Link"
+                    <a href="https://teamiify.herokuapp.com/" target="_blank" title="Project Link"
                         class="folio-item__project-link">Project
                         Link</a>
                     <div class="folio-item__caption">
@@ -424,7 +424,7 @@
                         <div class="folio-item__cat"></div>
                         <h4 class="folio-item__title">Twilight Event Managing</h4>
                     </div>
-                    <a href="https://github.com/RastogiTanya/Twilight-Event-Managing" title="Project Link"
+                    <a href="https://github.com/RastogiTanya/Twilight-Event-Managing" target="_blank" title="Project Link"
                         class="folio-item__project-link">Project
                         Link</a>
                     <div class="folio-item__caption">
@@ -538,7 +538,7 @@
                                 Email
                             </h5>
                             <p class="footer-contact-block__content">
-                                <a href="https://mail.google.com/">rastogitanya96@gmail.com</a>
+                                <a href="https://mail.google.com/" target="_blank">rastogitanya96@gmail.com</a>
                             </p>
 
                         </div> <!-- end footer-contact-block -->
@@ -557,10 +557,10 @@
                             </h5>
                             <ul class="footer-contact-block__list">
                                 <div >
-                                    <a href="https://www.linkedin.com/in/tanya-rastogi-a6b94b199/"><i class="fab fa-linkedin fa-2x" aria-hidden="true">&nbsp</i></a> &nbsp
-                                     <a href="https://github.com/RastogiTanya"><i class="fab fa-github  fa-2x" aria-hidden="true">&nbsp</i></a>
-                                     <a href="https://www.instagram.com/tanya.rastogi99/"><i class="fab fa-instagram  fa-2x" aria-hidden="true">&nbsp</i></a>
-                                    <a href="https://twitter.com/TanyaRa54138296"><i class="fab fa-twitter fa-2x" aria-hidden="true">&nbsp</i></a>
+                                    <a href="https://www.linkedin.com/in/tanya-rastogi-a6b94b199/" target="_blank"><i class="fab fa-linkedin fa-2x" aria-hidden="true">&nbsp</i></a> &nbsp
+                                     <a href="https://github.com/RastogiTanya" target="_blank"><i class="fab fa-github  fa-2x" aria-hidden="true">&nbsp</i></a>
+                                     <a href="https://www.instagram.com/tanya.rastogi99/" target="_blank"><i class="fab fa-instagram  fa-2x" aria-hidden="true">&nbsp</i></a>
+                                    <a href="https://twitter.com/TanyaRa54138296" target="_blank"><i class="fab fa-twitter fa-2x" aria-hidden="true">&nbsp</i></a>
                                 </div>
                                         
 
