logo link updated

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a href="index.html">
+            <a href="#0">
                 <img src="images/fav.png" alt="Homepage" style="width: 60px; height:60px">
             </a>
         </div>
