--- a/index.html
+++ b/index.html
@@ -433,28 +433,7 @@
                     </div>
                 </div>
             </div> <!-- end column -->
-            <div class="column" data-aos="fade-up">
-                <div class="folio-item">
-                    <div class="folio-item__thumb">
-                        <a class="folio-item__thumb-link" href="images/portfolio/gallery/g-shout-jump.jpg"
-                            Title="Shout and Jump" data-size="1050x700">
-                            <img src="images/portfolio/shout-and-jump.jpg"
-                                srcset="images/portfolio/shout-and-jump.jpg 1x, images/portfolio/shout-and-jump@2x.jpg 2x"
-                                alt="">
-                        </a>
-                    </div>
-                    <div class="folio-item__info">
-                        <div class="folio-item__cat">Branding</div>
-                        <h4 class="folio-item__title">Shout & Jump</h4>
-                    </div>
-                    <a href="https://www.behance.net/" title="Project Link" class="folio-item__project-link">Project
-                        Link</a>
-                    <div class="folio-item__caption">
-                        <p>Vero molestiae sed aut natus excepturi. Et tempora numquam. Temporibus iusto quo.Unde dolorem
-                            corrupti neque nisi.</p>
-                    </div>
-                </div>
-            </div> <!-- end column -->
+           !-- end column -->
             <!-- end column -->
             <!-- end column -->
 
