--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
             <div class="row">
                 <div class="column">
                     <div class="section-intro" data-num="06" data-aos="fade-up">
-                        <h2 style=" color:#f9861a ">Other Projects -></h2>
+                        <h2 style=" color:#f9861a ">Other Projects:</h2>
                     </div>
                 </div>
                 <div class="column">
