--- a/index.html
+++ b/index.html
@@ -368,7 +368,7 @@
 
     <!-- portfolio
     ================================================== -->
-    <section id="portfolio" class="s-portfolio target-section">
+    <section id="portfolio" class="s-portfolio target-section" style="padding-bottom:5%">
 
         <div class="row s-portfolio__header">
             <div class="column large-6 medium-8 tab-full">
