Projects link updated

--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                         <div class="testimonial-slider__author" style="text-align: left;">
 
                             <cite class="testimonial-slider__cite">
-                                <strong style="text-align: left;">Number Hunt</strong>
+                                <strong style="text-align: left;"><a herf="https://github.com/RastogiTanya/Number-Hunt">Number Hunt</a></strong>
                                 <span>Linux</span>
                             </cite>
                         </div>
@@ -472,7 +472,7 @@
                         <div class="testimonial-slider__author">
 
                             <cite class="testimonial-slider__cite">
-                                <strong>Tic-Tac-Toe</strong>
+                                <strong><a herf="https://github.com/RastogiTanya/Tic-Tac-Toe" style="cursor: pointer;">Tic-Tac-Toe</a></strong>
                                 <span>A fun game </span>
                             </cite>
                         </div>
