More links added

--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
                     <div class="testimonial-slider__slide">
                         <div class="testimonial-slider__author">
                             <cite class="testimonial-slider__cite">
-                                <strong>NotesApp</strong>
+                                <strong><a herf="https://github.com/RastogiTanya/NotesApp">NotesApp</a></strong>
                                 <span>Vanilla javascripted todo list</span>
                             </cite>
 
@@ -489,7 +489,7 @@
                     <div class="testimonial-slider__slide">
                         <div class="testimonial-slider__author">
                             <cite class="testimonial-slider__cite">
-                                <strong>Wow-Library</strong>
+                                <strong><a herf="https://github.com/RastogiTanya/Wow-Library">Wow-Library</a></strong>
                                 <span>Single page application</span>
                             </cite>
 
