--- a/index.html
+++ b/index.html
@@ -430,7 +430,7 @@
                         <div class="testimonial-slider__author" style="text-align: left;">
 
                             <cite class="testimonial-slider__cite">
-                                <strong style="text-align: left;"><a herf="https://github.com/RastogiTanya/Number-Hunt">Number Hunt</a></strong>
+                                <strong style="text-align: left;"><a herf="https://github.com/RastogiTanya/Number-Hunt" style="cursor: pointer;">Number Hunt</a></strong>
                                 <span>Linux</span>
                             </cite>
                         </div>
@@ -448,7 +448,7 @@
                     <div class="testimonial-slider__slide">
                         <div class="testimonial-slider__author">
                             <cite class="testimonial-slider__cite">
-                                <strong><a herf="https://github.com/RastogiTanya/NotesApp">NotesApp</a></strong>
+                                <strong><a herf="https://github.com/RastogiTanya/NotesApp" style="cursor: pointer;">NotesApp</a></strong>
                                 <span>Vanilla javascripted todo list</span>
                             </cite>
 
@@ -489,7 +489,7 @@
                     <div class="testimonial-slider__slide">
                         <div class="testimonial-slider__author">
                             <cite class="testimonial-slider__cite">
-                                <strong><a herf="https://github.com/RastogiTanya/Wow-Library">Wow-Library</a></strong>
+                                <strong><a herf="https://github.com/RastogiTanya/Wow-Library" style="cursor: pointer;">Wow-Library</a></strong>
                                 <span>Single page application</span>
                             </cite>
 
