--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <header class="s-header">
 
         <div class="header-logo">
-            <a href="#0">
+            <a href="#home">
                 <img src="images/fav.png" alt="Homepage" style="width: 60px; height:60px">
             </a>
         </div>
@@ -61,7 +61,7 @@
 
             <nav class="row header-nav-wrap">
                 <ul class="header-nav">
-                    <li><a class="smoothscroll" href="#hero" title="Intro" style="color: white;">Home</a></li>
+                    <li><a class="smoothscroll" href="#home" title="Intro" style="color: white;">Home</a></li>
                     <li><a class="smoothscroll" href="#about" title="About" style="color: white;">About</a></li>
                     <!-- <li><a class="smoothscroll" href="#services" title="Services">Services</a></li> -->
                     <li><a class="smoothscroll" href="#qualifications" title="qualifications" style="color: white;">Qualifications</a>
@@ -88,7 +88,7 @@
 
     <!-- hero
     ================================================== -->
-    <section id="hero" class="s-hero target-section" data-parallax="scroll" data-image-src="images/services-bg-3000.jpg"
+    <section id="home" class="s-hero target-section" data-parallax="scroll" data-image-src="images/services-bg-3000.jpg"
         data-natural-width=3000 data-natural-height=2000 data-position-y=center>
 
         <div class="row hero-content">
